--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> Shariful Islam - Portfolio</title>
+<link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet'>
 <style>
 
 .center {
@@ -33,9 +34,9 @@ background-position: center;
 }
 
 
-h1 {
-	color: white;
-	font-size: 36px;
+h3 {
+font-family: 'Allura';font-size: 42px;
+color: white;
 	
 }
 
@@ -44,7 +45,8 @@ h1 {
 
 
 <body>
-  <h1 class="center">Shariful Islam</h1>
+  <h3 class="center";font-family:Allura; style="font-size:42px;">
+Shariful Islam</h3>
 </body>
 
 <body>
@@ -55,7 +57,7 @@ h1 {
   <div class="nav-header">
     <div class="nav-brand">
 
-      <img src="https://media.licdn.com/dms/image/v2/D5622AQETm0wCZpGheA/feedshare-shrink_800/feedshare-shrink_800/0/1727032619949?e=1729728000&v=beta&t=iKOm94s6L-7I6sQ_FTuMMU4G1xmmI3Te1sEBz3AcRXU"width="800" height="800">
+      <img src="https://media.licdn.com/dms/image/v2/D5622AQETm0wCZpGheA/feedshare-shrink_800/feedshare-shrink_800/0/1727032619949?e=1729728000&v=beta&t=iKOm94s6L-7I6sQ_FTuMMU4G1xmmI3Te1sEBz3AcRXU"width="600" height="600">
       
   <!-- end navbar header -->
 
@@ -255,24 +257,34 @@ Graphics Design</h1>
       <div class="footer">
 
 
-<p class="center">         CONNECT WITH ME ON SOCIAL MEDIA</p>
+<p class="center">CONNECT WITH ME ON SOCIAL MEDIA</p>
 
+<a href="https://www.facebook.com/SH4RIFULB4PPY">
 <img src="https://th.bing.com/th/id/OIP.ECzNbQR_AZfAJQfBPXjMGgHaHa?w=174&h=180&c=7&r=0&o=5&pid=1.7"width="50" height="50">
+</a>
 
-<img src="https://pngimg.com/uploads/github/github_PNG28.png"width="50" height="50">
-
-<img src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG8.png"width="50" height="50">
-
+<a href="https://www.instagram.com/shariful.bappy03/">
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png"width="50" height="50">
+</a>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/2062095_application_chat_communication_logo_whatsapp_icon.svg/2048px-2062095_application_chat_communication_logo_whatsapp_icon.svg.png"width="50" height="50">
 
-        <div class="social-links">
-          <span><a href="https://www.linkedin.com/in/bradleyengelhardt" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></span>
-          <span><a target="_blank" href="https://twitter.com/bradengelhardt" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></span>
-          <span><a href="https://github.com/SquishyAndroid" target="_blank"><i class="fa fa-github fa-2x"></i></a></span>
-          <span><a href="https://codepen.io/SquishyAndroid/pens/public/"><i class="fa fa-codepen fa-2x"></i></a></span>
-        </div>
+<a href="https://x.com/scr33nsh4ke">
+<img scr="https://icon2.cleanpng.com/20240119/ctw/transparent-x-logo-multiplication-symbol-math-program-science-black-button-with-white-x-symbol-for-1710889406911.webp" width="50" height="50">
+</a>
+
+<a href="https://github.com/scr33nshake">
+<img src="https://pngimg.com/uploads/github/github_PNG28.png"width="50" height="50">
+</a>
+
+<span><a href="https://www.linkedin.com/in/shariful03/">
+<img src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG8.png"width="50" height="50">
+</a></span>
+
+
+<a href="https://t.me/screenshake">
+<img src="https://th.bing.com/th/id/OIP.9GePYPo_rTpZpV-6GpETQAHaHa?w=186&h=186&c=7&r=0&o=5&pid=1.7"width="50" height="50">
+</a>
+        
       </div>
     </div>
     <!-- end section -->
