--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Shariful Islam</h3>
   <div class="nav-header">
     <div class="nav-brand">
 
-      <img src="https://media.licdn.com/dms/image/v2/D5622AQETm0wCZpGheA/feedshare-shrink_800/feedshare-shrink_800/0/1727032619949?e=1729728000&v=beta&t=iKOm94s6L-7I6sQ_FTuMMU4G1xmmI3Te1sEBz3AcRXU"width="600" height="600">
+      <img src="https://scontent.fdac24-2.fna.fbcdn.net/v/t39.30808-6/428705301_7193342750747989_1984061496619591625_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeH00qKq5tCh2yQeyhq86tS9RXae2ZspzQNFdp7ZmynNA7WvJed9kqTp9NXEksHErlVmqugtKxk5PbMy2wJt26kc&_nc_ohc=bYwlN6HUcCUQ7kNvgFxOydb&_nc_zt=23&_nc_ht=scontent.fdac24-2.fna&_nc_gid=AUX93RK1TqMCFvyn75Yzm1n&oh=00_AYBfsS0LfMpxkIlNGiQNZL3flpLzluAfd1SZalQBfpR7pA&oe=672ECEF7"width="600" height="600">
       
   <!-- end navbar header -->
 
